--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
         </receiver>
 
         <activity
-            android:screenOrientation="reverseLandscape"
+            android:screenOrientation="portrait"
             android:name=".MonitorMainActivity"
             android:label="@string/app_name"
             android:launchMode="singleInstance"
