--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'io.fabric'
 
 android {
     compileSdkVersion 27
-    buildToolsVersion '27.0.2'
+    buildToolsVersion '28.0.2'
     defaultConfig {
         applicationId 'org.radarcns.prmtmonitor'
         minSdkVersion 21
@@ -26,6 +26,10 @@ android {
         exclude 'META-INF/ASL2.0'
         exclude 'META-INF/LICENSE'
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 repositories {
@@ -37,13 +41,13 @@ repositories {
 }
 
 dependencies {
-    api 'org.radarcns:radar-commons-android:0.6.1'
+    api 'org.radarcns:radar-commons-android:0.7.0'
 
     //implementation 'org.radarcns:radar-android-login-qr:0.6'
     implementation 'com.google.firebase:firebase-config:11.6.2'
     implementation 'org.slf4j:slf4j-api:1.7.25'
     implementation 'sk.baka.slf4j:slf4j-handroid:1.7.26'
-    implementation('com.crashlytics.sdk.android:crashlytics:2.7.1@aar') {
+    implementation('com.crashlytics.sdk.android:crashlytics:2.9.5@aar') {
         transitive = true
     }
 
@@ -52,9 +56,9 @@ dependencies {
 
     //api project(':commons-android')
 
-    testApi 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.12'
     testRuntimeOnly 'org.slf4j:slf4j-simple:1.7.25'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
 
     implementation 'com.jjoe64:graphview:4.2.2'
 }
